--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,9 +3,12 @@ uvicorn[standard]
 python-dotenv
 langchain>=0.1.0
 langchain-community
+langchain-chroma
 openai>=1.0.0
 tiktoken
 pydantic
 chromadb
 PyMuPDF==1.23.9
 langchain-openai
+redis>=5.0.0
+scikit-learn
