--- a/backend-worker/requirements.txt
+++ b/backend-worker/requirements.txt
@@ -2,6 +2,7 @@ fastapi
 uvicorn[standard]
 python-dotenv
 langchain>=0.1.0
+langchain-core>=0.1.0
 langchain-community
 langchain-chroma
 openai>=1.0.0
