--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -6,26 +6,41 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lexobot-ai-admin:generate": "openapi-typescript ./src/api/clients/lexobot-ai/spec.json -o ./src/api/clients/lexobot-ai/api.d.ts",
+    "lexobot-ai-admin:update-local": "curl -s http://127.0.0.1:8000/openapi.json -o ./src/api/clients/lexobot-ai/spec.json && sed -i '' 's/; x-api-version=[0-9]*//' ./src/api/clients/lexobot-ai/spec.json && npx openapi-typescript ./src/api/clients/lexobot-ai/spec.json -o ./src/api/clients/lexobot-ai/api.d.ts --bare"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.80.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.512.0",
     "next": "^15.3.3",
+    "next-themes": "^0.4.6",
+    "openapi-typescript": "^7.8.0",
+    "openapi-typescript-fetch": "^2.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.57.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
