--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -37,6 +37,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "yup": "^1.6.1",
     "zod": "^3.25.56",
     "zustand": "^5.0.5"
