--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.512.0",
@@ -33,6 +34,7 @@
     "openapi-typescript": "^7.8.0",
     "openapi-typescript-fetch": "^2.2.0",
     "react": "^18.3.1",
+    "react-currency-input-field": "^3.10.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.57.0",
     "sonner": "^2.0.5",
