--- a/.github/workflows/lexobot-admin.yml
+++ b/.github/workflows/lexobot-admin.yml
@@ -77,8 +77,13 @@ jobs:
             [ -f docker-compose-admin.yml ] && mv docker-compose-admin.yml docker-compose-admin_$ts.yml
 
             # Unzip new versions
-            unzip -q backend-admin.zip
-            unzip -q frontend-admin.zip
+            if command -v busybox &> /dev/null; then
+              busybox unzip -q backend-admin.zip
+              busybox unzip -q frontend-admin.zip
+            else
+              bsdtar -xf backend-admin.zip
+              bsdtar -xf frontend-admin.zip
+            fi
 
             # Move docker-compose back to root deploy folder
             mv docker-compose-admin.yml .
