--- a/.github/workflows/lexobot-admin.yml
+++ b/.github/workflows/lexobot-admin.yml
@@ -77,8 +77,8 @@ jobs:
             [ -f docker-compose-admin.yml ] && mv docker-compose-admin.yml docker-compose-admin_$ts.yml
 
             # Unzip new versions
-            bsdtar -xf backend-admin.zip
-            bsdtar -xf frontend-admin.zip
+            unzip -q backend-admin.zip
+            unzip -q frontend-admin.zip
 
             # Move docker-compose back to root deploy folder
             mv docker-compose-admin.yml .
