--- a/.github/workflows/lexobot-admin.yml
+++ b/.github/workflows/lexobot-admin.yml
@@ -83,17 +83,15 @@ jobs:
             rm -f backend-admin.zip frontend-admin.zip
 
             # Create .env file dynamically with secrets
-            cat > .env << ENVFILE
-            SECRET_KEY=${{ secrets.SECRET_KEY }}
-            FASTAPI_TITLE=${{ secrets.FASTAPI_TITLE }}
-            POSTGRESQL_SERVER=postgres
-            POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-            POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-            POSTGRESQL_PORT=5432
-            CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}
-            NEXT_PUBLIC_API_LEXOBOT_URL=http://187.33.158.74:8000
-            ENVFILE
+            echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
+            echo "FASTAPI_TITLE=${{ secrets.FASTAPI_TITLE }}" >> .env
+            echo "POSTGRESQL_SERVER=postgres" >> .env
+            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+            echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+            echo "POSTGRESQL_PORT=5432" >> .env
+            echo "CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}" >> .env
+            echo "NEXT_PUBLIC_API_LEXOBOT_URL=http://187.33.158.74:8000" >> .env
 
             # Launch containers
             docker compose -f docker-compose-admin.yml up -d --build
