--- a/.github/workflows/lexobot-admin.yml
+++ b/.github/workflows/lexobot-admin.yml
@@ -13,55 +13,38 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js (for frontend build)
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install frontend dependencies and build
-        run: |
-          cd frontend-admin
-          npm ci
-          npm run build
-          cd ..
-
       - name: Prepare dist folder
         run: |
           rm -rf dist
           mkdir dist
 
-          # Copy backend-admin source (ajustar si necesitás solo archivos específicos)
+          # Copy backend
           cp -r backend-admin dist/backend-admin
 
-          # Copy frontend build output
-          mkdir -p dist/frontend-admin
-          cp -r frontend-admin/.next dist/frontend-admin/
-          cp -r frontend-admin/public dist/frontend-admin/
-          cp frontend-admin/package.json dist/frontend-admin/
-          cp frontend-admin/next.config.js dist/frontend-admin/ || true
-
+          # Copy frontend
+          cp -r frontend-admin dist/frontend-admin
+          
           # Copiar docker-compose
           cp infra/docker/docker-compose-admin.yml dist/
 
-      - name: Zip the artifacts
+      - name: Build and package backend
         run: |
-          cd dist
-          zip -r backend-admin.zip backend-admin
-          zip -r frontend-admin.zip frontend-admin
-          cd ..
+          docker build -t backend-admin-image ./backend-admin
+          docker save backend-admin-image | gzip > dist/backend-admin.tar.gz
+
+      - name: Build and package frontend
+        run: |
+          docker build -t frontend-admin-image ./frontend-admin
+          docker save frontend-admin-image | gzip > dist/frontend-admin.tar.gz
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Create deploy directory on server
+      - name: Transfer files to server
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "mkdir -p ~/lexobot-deploy"
-
-      - name: Upload ZIPs to server deploy folder
-        run: |
-          scp -o StrictHostKeyChecking=no dist/*.zip dist/docker-compose-admin.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/lexobot-deploy/
+          rsync -avz -e "ssh -o StrictHostKeyChecking=no" dist/*.tar.gz dist/docker-compose-admin.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/lexobot-deploy/
 
       - name: Deploy on server
         run: |
@@ -69,18 +52,12 @@ jobs:
             set -e
             cd ~/lexobot-deploy
 
-            ts=$(date +%Y%m%d%H%M%S)
+            # Stop existing services
+            docker compose -f docker-compose-admin.yml down || true
 
-            # Backup previous deployments
-            [ -d backend-admin ] && mv backend-admin backend-admin_$ts
-            [ -d frontend-admin ] && mv frontend-admin frontend-admin_$ts
-
-            # Unzip new versions
-            unzip -q backend-admin.zip
-            unzip -q frontend-admin.zip
-
-            # Remove zip files
-            rm -f backend-admin.zip frontend-admin.zip
+            # Load new images
+            docker load -i backend-admin.tar.gz
+            docker load -i frontend-admin.tar.gz
 
             # Create .env file dynamically with secrets
             echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
@@ -91,12 +68,13 @@ jobs:
             echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
             echo "POSTGRESQL_PORT=5432" >> .env
             echo "CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}" >> .env
-            echo "NEXT_PUBLIC_API_LEXOBOT_URL=http://187.33.158.74:8000" >> .env
+            echo "NEXT_PUBLIC_API_LEXOBOT_URL=${{ secrets.NEXT_PUBLIC_API_LEXOBOT_URL }}" >> .env
+
+            chmod 600 .env
 
             # Launch containers
-            docker compose -f docker-compose-admin.yml up -d --build
+            docker compose -f docker-compose-admin.yml up -d
 
-            # Optional: Remove backups older than 3 days
-            find . -maxdepth 1 -type d -name "backend-admin_*" -mtime +3 -exec rm -rf {} \;
-            find . -maxdepth 1 -type d -name "frontend-admin_*" -mtime +3 -exec rm -rf {} \;
+            # Clean up
+            rm -f *.tar.gz
           EOF
