--- a/infra/docker/docker-compose-admin.yml
+++ b/infra/docker/docker-compose-admin.yml
@@ -3,29 +3,19 @@ services:
     image: postgres:15
     restart: unless-stopped
     container_name: postgres
-    environment:
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_DB: "${POSTGRES_DB}"
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - lexobot-admin
 
   api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
-    container_name: python-api
+    image: backend-admin-image
+    container_name: lexobot-api
     restart: unless-stopped
-    environment:
-      SECRET_KEY: "${SECRET_KEY}"
-      FASTAPI_TITLE: "${FASTAPI_TITLE}"
-      POSTGRESQL_SERVER: "postgres"
-      POSTGRESQL_USER: "${POSTGRES_USER}"
-      POSTGRESQL_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRESQL_DB: "${POSTGRES_DB}"
-      POSTGRESQL_PORT: "5432"
+    env_file:
+      - .env
     depends_on:
       - postgres
     ports:
@@ -34,13 +24,11 @@ services:
       - lexobot-admin
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: nextjs-frontend
+    image: frontend-admin-image
+    container_name: lexobot-admin
     restart: unless-stopped
-    environment:
-      NEXT_PUBLIC_API_LEXOBOT_URL: http://187.33.158.74:8000
+    env_file:
+      - .env
     depends_on:
       - api
     ports:
