--- a/frontend-admin/Dockerfile
+++ b/frontend-admin/Dockerfile
@@ -2,10 +2,10 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY frontend-admin/package.json frontend-admin/package-lock.json ./
+COPY package*.json ./
 RUN npm ci
 
-COPY frontend-admin .
+COPY . .
 
 RUN npm run build
 
@@ -13,6 +13,7 @@ FROM node:18-alpine AS runner
 
 WORKDIR /app
 
+COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
