--- a/.github/workflows/lexobot-admin.yml
+++ b/.github/workflows/lexobot-admin.yml
@@ -63,9 +63,9 @@ jobs:
             echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" > .env
             echo "FASTAPI_TITLE=${{ secrets.FASTAPI_TITLE }}" >> .env
             echo "POSTGRESQL_SERVER=postgres" >> .env
-            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-            echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+            echo "POSTGRESQL_USER=${{ secrets.POSTGRES_USER }}" >> .env
+            echo "POSTGRESQL_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+            echo "POSTGRESQL_DB=${{ secrets.POSTGRES_DB }}" >> .env
             echo "POSTGRESQL_PORT=5432" >> .env
             echo "CORS_ORIGINS=${{ secrets.CORS_ORIGINS }}" >> .env
             echo "NEXT_PUBLIC_API_LEXOBOT_URL=${{ secrets.NEXT_PUBLIC_API_LEXOBOT_URL }}" >> .env
