--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -35,12 +35,14 @@
     "lucide-react": "^0.512.0",
     "next": "^15.3.3",
     "next-themes": "^0.4.6",
+    "openapi-fetch": "^0.14.0",
     "openapi-typescript": "^7.8.0",
     "openapi-typescript-fetch": "^2.2.0",
     "react": "^18.3.1",
     "react-currency-input-field": "^3.10.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
