--- a/frontend-chat/Dockerfile
+++ b/frontend-chat/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:18-alpine AS builder
 
+ARG NEXT_PUBLIC_API_BASE_URL
+
+ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
+
 WORKDIR /app
 
 COPY package.json package-lock.json ./
