--- a/.github/workflows/lexobot-admin.yml
+++ b/.github/workflows/lexobot-admin.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           docker build \
             --build-arg NEXT_PUBLIC_API_LEXOBOT_URL=${{ secrets.NEXT_PUBLIC_API_LEXOBOT_URL }} \
-            t frontend-admin-image dist/frontend-admin
+            -t frontend-admin-image dist/frontend-admin
           docker save frontend-admin-image | gzip > dist/frontend-admin.tar.gz
 
       - name: Setup SSH
