--- a/frontend-chat/Dockerfile
+++ b/frontend-chat/Dockerfile
@@ -3,6 +3,7 @@ FROM node:18-alpine AS builder
 ARG NEXT_PUBLIC_API_BASE_URL
 
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
+ENV NODE_ENV=production
 
 WORKDIR /app
 
