--- a/frontend-chat/Dockerfile
+++ b/frontend-chat/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:18-alpine AS builder
 
 ARG NEXT_PUBLIC_API_BASE_URL
+ARG NODE_ENV
 
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
-ENV NODE_ENV=production
+ENV NODE_ENV=$NODE_ENV
 
 WORKDIR /app
 
