--- a/frontend-chat/Dockerfile
+++ b/frontend-chat/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:18-alpine AS builder
 
 ARG NEXT_PUBLIC_API_BASE_URL
-ARG NODE_ENV
+ARG NEXT_PUBLIC_ENV
 
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
+ENV NEXT_PUBLIC_ENV=$NEXT_PUBLIC_ENV
 
 WORKDIR /app
 
@@ -12,7 +13,6 @@ RUN npm ci
 
 COPY . .
 
-ENV NODE_ENV=$NODE_ENV
 RUN npm run build
 
 FROM node:18-alpine AS runner
