--- a/.github/workflows/lexobot-gateway.yml
+++ b/.github/workflows/lexobot-gateway.yml
@@ -30,6 +30,7 @@ jobs:
           docker build \
             --build-arg NEXT_PUBLIC_API_BASE_URL=${{ secrets.NEXT_PUBLIC_API_BASE_URL }} \
             --build-arg NEXT_PUBLIC_ENV=${{ secrets.NEXT_PUBLIC_ENV }} \
+            --build-arg NEXT_PUBLIC_TENANT_IMAGES_BASE_URL=${{ secrets.NEXT_PUBLIC_TENANT_IMAGES_BASE_URL }} \
             -t frontend-chat-image dist/frontend-chat
           docker save frontend-chat-image | gzip > dist/frontend-chat.tar.gz
       
