--- a/frontend-chat/Dockerfile
+++ b/frontend-chat/Dockerfile
@@ -2,9 +2,11 @@ FROM node:18-alpine AS builder
 
 ARG NEXT_PUBLIC_API_BASE_URL
 ARG NEXT_PUBLIC_ENV
+ARG NEXT_PUBLIC_TENANT_IMAGES_BASE_URL
 
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
 ENV NEXT_PUBLIC_ENV=$NEXT_PUBLIC_ENV
+ENV NEXT_PUBLIC_TENANT_IMAGES_BASE_URL=$NEXT_PUBLIC_TENANT_IMAGES_BASE_URL
 
 WORKDIR /app
 
