--- a/frontend-chat/package.json
+++ b/frontend-chat/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
