--- a/backend-worker/Dockerfile
+++ b/backend-worker/Dockerfile
@@ -14,4 +14,5 @@ COPY . .
 
 # Exponer puerto y comando de arranque
 EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+#CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "-w", "2", "-b", "0.0.0.0:8000", "--timeout", "60", "app.main:app"]
