--- a/tenant-gateway/package.json
+++ b/tenant-gateway/package.json
@@ -7,6 +7,7 @@
         "start": "node gateway.js"
     },
     "dependencies": {
+        "dotenv": "^17.0.0",
         "express": "^4.18.4",
         "http-proxy-middleware": "^2.0.6"
     }
